# composable-types

./: .gitmodules  README.md  cabal.project
ct-transpiler/: .gitignore  Common.hs  LICENSE.txt  README.md  ct-transpiler.cabal  example.sh  test.sh
ct-transpiler/app/: GeneratedNames.hs  PieceTransform.hs  Testparse.hs
ct-transpiler/app/Utils/: Names.hs  Types.hs
ct-transpiler/example/: AsString.hs  Desug.hs  Eval.hs  Expr.hs  Main.hs  Negation.hs
ct-transpiler/lib/: ComposableTypes.hs
ct-transpiler/src/: ConstraintsTransform.hs  ExportsTransform.hs  FunctionTransform.hs  GeneratedNames.hs  PieceTransform.hs  TempEnv.hs  Transform.hs  TransformFiles.hs  TransformUtils.hs
ct-transpiler/src/Utils/: Contexts.hs  Decls.hs  Exports.hs  Exps.hs  Names.hs  Types.hs
ct-transpiler/testsuite/: .gitignore  TestRunner.hs
ct-transpiler/testsuite/bad/CategoryInClass/: CategoryInClass.hs  CategoryInClassTransform.golden
ct-transpiler/testsuite/bad/HidingExpr/: HidingExpr.hs  HidingExprTransform.golden  Init.hs
ct-transpiler/testsuite/bad/HidingPieceConstr/: HidingPieceConstr.hs  HidingPieceConstrTransform.golden  Init.hs
ct-transpiler/testsuite/bad/OrderForLiftSum/: OrderForLiftSum.hs  OrderForLiftSumTransform.golden
ct-transpiler/testsuite/bad/PieceNoCategory/: PieceNoCategory.hs
ct-transpiler/testsuite/bad/WrongCatInComp/: WrongCatInComp.hs  WrongCatInCompTransform.golden
ct-transpiler/testsuite/bad/WrongCatInExt/: WrongCatInExt.hs  WrongCatInExtTransform.golden
ct-transpiler/testsuite/bad/WrongNumberTyInds/: WrongNumberTyInds.hs  WrongNumberTyIndsTransform.golden
ct-transpiler/testsuite/bad/WrongNumberTyInds2/: WrongNumberTyInds2.hs  WrongNumberTyInds2Transform.golden
ct-transpiler/testsuite/good/AltTyVarInExt/: AltTyVarInExt.hs  AltTyVarInExtTransform.golden
ct-transpiler/testsuite/good/CatCheckInDecl/: CatCheckInDecl.hs  CatCheckInDeclTransform.golden
ct-transpiler/testsuite/good/CatCheckInFunc/: CatCheckInFunc.hs  CatCheckInFuncTransform.golden
ct-transpiler/testsuite/good/ChecksContextInFun/: ChecksContextInFun.hs  ChecksContextInFunTransform.golden
ct-transpiler/testsuite/good/ChecksInFunc/: ChecksInFunc.hs  ChecksInFuncTransform.golden
ct-transpiler/testsuite/good/Common/: Common.hs  CommonTransform.golden
ct-transpiler/testsuite/good/ConstParam/: ConstParam.hs  ConstParamTransform.golden
ct-transpiler/testsuite/good/ContextInExt/: ContextInExt.hs  ContextInExtTransform.golden
ct-transpiler/testsuite/good/CreateRecord/: CreateRecord.hs  CreateRecordTransform.golden
ct-transpiler/testsuite/good/CreateRecordByApp/: CreateRecordByApp.hs  CreateRecordByAppTransform.golden
ct-transpiler/testsuite/good/Desug/: Desug.hs  DesugTransform.golden
ct-transpiler/testsuite/good/Eval/: Eval.hs  EvalTransform.golden
ct-transpiler/testsuite/good/EvalConstructExample/: EvalConstructExample.hs  EvalConstructExampleTransform.golden
ct-transpiler/testsuite/good/EvalConstructExample2/: EvalConstructExample2.hs  EvalConstructExample2Transform.golden
ct-transpiler/testsuite/good/EvalNum/: EvalNum.hs  EvalNumTransform.golden
ct-transpiler/testsuite/good/EvalPrim/: EvalPrim.hs  EvalPrimTransform.golden
ct-transpiler/testsuite/good/EvalWithArg/: EvalWithArg.hs  EvalWithArgTransform.golden
ct-transpiler/testsuite/good/Import/: A.hs  Import.hs  ImportTransform.golden
ct-transpiler/testsuite/good/ImportCategoryToPieceDecl/: ImportCategoryToPieceDecl.hs  ImportCategoryToPieceDeclTransform.golden  R.hs
ct-transpiler/testsuite/good/ImportEval/: A.hs  B.hs  ImportEval.hs  ImportEvalTransform.golden
ct-transpiler/testsuite/good/ImportLimitedExport/: ImportLimitedExport.hs  ImportLimitedExportTransform.golden  Init.hs
ct-transpiler/testsuite/good/ImportPieceDeclToComposition/: ImportPieceDeclToComposition.hs  ImportPieceDeclToCompositionTransform.golden  Pieces.hs
ct-transpiler/testsuite/good/LimitExport/: LimitExport.hs  LimitExportTransform.golden
ct-transpiler/testsuite/good/LimitImport/: LimitImport.hs  LimitImportTransform.golden
ct-transpiler/testsuite/good/MaybeE/: MaybeE.hs  MaybeETransform.golden
ct-transpiler/testsuite/good/PieceConst/: PieceConst.hs  PieceConstTransform.golden
ct-transpiler/testsuite/good/PieceConstrInSection/: PieceConstrInSection.hs  PieceConstrInSectionTransform.golden
ct-transpiler/testsuite/good/PieceOp/: PieceOp.hs  PieceOpTransform.golden
ct-transpiler/testsuite/good/PieceOpInfixRecord/: PieceOpInfixRecord.hs  PieceOpInfixRecordTransform.golden
ct-transpiler/testsuite/good/SingletonPieceConstr/: SingletonPieceConstr.hs  SingletonPieceConstrTransform.golden
ct-transpiler/testsuite/good/TransformativeTwoCategories/: TransformativeTwoCategories.hs  TransformativeTwoCategoriesTransform.golden
ct-transpiler/testsuite/good/TransformativeTwoCategories2/: TransformativeTwoCategories2.hs  TransformativeTwoCategories2Transform.golden
ct-transpiler/testsuite/good/TyVarEx/: TyVarEx.hs  TyVarExTransform.golden
ct-transpiler/testsuite/good/TyVarFInDecl/: TyVarFInDecl.hs  TyVarFInDeclTransform.golden
ct-transpiler/testsuite/good/TyVarFunCons/: TyVarFunCons.hs  TyVarFunConsTransform.golden
ct-transpiler/testsuite/good/TyVarGInDecl/: TyVarGInDecl.hs  TyVarGInDeclTransform.golden
ct-transpiler/testsuite/good/TyVarInDecl/: TyVarInDecl.hs  TyVarInDeclTransform.golden
ct-transpiler/testsuite/good/TyVarInExt/: TyVarInExt.hs  TyVarInExtTransform.golden
ct-transpiler/testsuite/good/VarTwiceInDecl/: VarTwiceInDecl.hs  VarTwiceInDeclTransform.golden
ct-transpiler/testsuite/good/WrongNumberTyInds2/: WrongNumberTyInds2.hs  WrongNumberTyInds2Transform.golden
ct-transpiler/testsuite/unclear/ABTest/: ABTest.hs
ct-transpiler/testsuite/unclear/Ambiguity/: Ambiguity.hs
ct-transpiler/testsuite/unclear/CompInFunctor/: CompInFunctor.hs
ct-transpiler/testsuite/unclear/EmptyTyComp/: EmptyTyComp.hs
ct-transpiler/testsuite/unclear/ExpInStmt/: ExpInStmt.hs
ct-transpiler/testsuite/unimplemented/PatternMatching1/: PatternMatching1.hs  PatternMatching1Transform.golden
related-work/: DTalC.hs  TreesThatGrow.hs  (+1 more)
(+43 files in other folders)
