cabal-version:      2.4
name:               ct-transpiler
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Fredrik Albers, Anna Romeborn
--maintainer:

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
    exposed-modules:  Transform

    -- Modules included in this library but not exported.
    other-modules:    FunctionTransform,
                      PieceTransform,
                      TransformUtils,
                      GeneratedNames,
                      Utils.Types,
                      Utils.Decls,
                      Utils.Exps,
                      Utils.Contexts,
                      Utils.Names

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    array >= 0.1, pretty >= 1.0,
                      base >= 4.5 && < 5,
                      haskell-src-exts,
                      containers,
                      mtl
    hs-source-dirs:   src
    default-language: Haskell2010

executable program
    main-is:          Testparse.hs
    build-depends:    base >= 4.5 && < 5,
                      ct-transpiler,
                      haskell-src-exts,
                      mtl
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded -Wall


executable testsuite
  main-is:          TestRunner.hs
  build-depends:    base >= 4.5 && < 5,
                    ct-transpiler,
                    haskell-src-exts,
                    mtl,
                    tasty,
                    tasty-golden,
                    filepath,
                    directory,
                    process
  hs-source-dirs:   testsuite
  default-language: Haskell2010
  ghc-options:      -threaded -Wall
