cabal-version:      2.4
name:               ct-transpiler
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Fredrik Albers, Anna Romeborn
--maintainer:

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
    exposed-modules:  Transform,
                      TransformFiles

    -- Modules included in this library but not exported.
    other-modules:    FunctionTransform,
                      PieceTransform,
                      TransformUtils,
                      GeneratedNames,
                      Utils.Types,
                      Utils.Decls,
                      Utils.Exps,
                      Utils.Contexts,
                      Utils.Names

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >= 4.5 && < 5,
                      haskell-src-exts,
                      containers < 0.7,
                      mtl < 2.3,
                      filepath < 1.5,
                      directory < 1.4
    hs-source-dirs:   src
    default-language: Haskell2010

executable program
    main-is:          Testparse.hs
    build-depends:    base >= 4.5 && < 5,
                      ct-transpiler,
                      haskell-src-exts,
                      mtl < 2.3,
                      filepath < 1.5
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded -Wall


executable testsuite
  main-is:          TestRunner.hs
  build-depends:    base >= 4.5 && < 5,
                    ct-transpiler,
                    haskell-src-exts,
                    mtl < 2.3,
                    tasty >= 0.6 && < 1.5,
                    tasty-golden < 2.4,
                    filepath < 1.5,
                    directory < 1.4,
                    process < 1.7,
                    compdata < 0.13,
                    -- compdata 0.12.1 fails to compile with template-haskell 2.17+
                    template-haskell < 2.17
  hs-source-dirs:   testsuite
  default-language: Haskell2010
  ghc-options:      -threaded -Wall
